src/app/pages/component-category-list/component-category-list.scss
@import '../../../styles/constants';

.docs-component-category-list-summary {
  padding: 25px 40px 0;
  font-size: 18px;
  line-height: 1.5;
  display: flex;
  justify-content: center;
}

@media (max-width: 1780px) {
  .docs-component-category-list-summary {
    max-width: 1160px;
  }
}

@media (max-width: 1480px) {
  .docs-component-category-list-summary {
    max-width: 860px;
  }
}

@media (max-width: 1180px) {
  .docs-component-category-list-summary {
    max-width: 560px;
  }
}

@media (max-width: 639px) {
  .docs-component-category-list-summary {
    max-width: 280px;
  }
}

.docs-component-category-list {
  display: flex;
  flex-wrap: wrap;
  padding: 20px;
}

.docs-component-category-list-item {
  display: inline-block;
  margin: 20px;
  vertical-align: top;
  width: 260px;

  .docs-component-category-list-card-title {
    align-items: center;
    display: flex;
    padding: 15px;
    font-size: 20px;
    font-weight: 500;
  }

  &, &:active, &:hover, &:focus {
    text-decoration: none;
  }
}

.docs-component-category-list-card-summary {
  padding: 0 15px 15px 15px;
  min-height: 2.4em;
  font-size: 15px;
}

